[package]
name = "dibs-db-schema"
version = "0.1.0"
edition = "2024"
authors = ["Amos Wenger <amos@bearcove.eu>"]
description = "Database schema types for dibs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/dibs"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
chrono.workspace = true
dibs-jsonb = { version = "0.1.0", path = "../dibs-jsonb" }
dibs-sql = { version = "0.1.0", path = "../dibs-sql" }
facet = { workspace = true, features = ["uuid", "chrono", "rust_decimal", "jiff02"] }
# could shed this dep if we put the `Jsonb` type elsewhere but shrug
facet-tokio-postgres.workspace = true
indexmap.workspace = true
inventory.workspace = true
jiff.workspace = true
rust_decimal.workspace = true
uuid.workspace = true

[dev-dependencies]
facet-value.workspace = true
