[package]
name = "dibs-db-schema"
version = "0.2.0-rc.3"
edition = "2024"
rust-version.workspace = true
authors = ["Amos Wenger <amos@bearcove.eu>"]
description = "Database schema types for dibs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
chrono.workspace = true
dibs-jsonb = { version = "0.2.0-rc.3", path = "../dibs-jsonb" }
dibs-sql = { version = "0.2.0-rc.3", path = "../dibs-sql" }
facet = { workspace = true, features = ["uuid", "chrono", "rust_decimal", "jiff02"] }
indexmap.workspace = true
inventory.workspace = true
jiff.workspace = true
rust_decimal.workspace = true
uuid.workspace = true

[dev-dependencies]
facet-value = { path = "../facet-value" }
