[package]
name = "dibs-jsonb"
version = "0.2.0-rc.5"
edition = "2024"
rust-version.workspace = true
description = "JSONB column support for dibs (Jsonb<T> wrapper for Facet types)"
license = "MIT OR Apache-2.0"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet.workspace = true
