[package]
name = "dibs-proto"
version = "0.2.0-rc.4"
edition = "2024"
rust-version.workspace = true
authors = ["Amos Wenger <amos@bearcove.eu>"]
description = "Protocol definitions for dibs CLI-to-service communication"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet.workspace = true
vox.workspace = true
