[package]
name = "dibs-qgen"
version = "0.2.0-rc.3"
edition = "2024"
rust-version.workspace = true
description = "Query DSL code generator for dibs (parses .styx query files into Rust and SQL)"
license = "MIT OR Apache-2.0"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
dibs-db-schema = { version = "0.2.0-rc.3", path = "../dibs-db-schema" }
dibs-query-schema.workspace = true
dibs-sql = { version = "0.2.0-rc.3", path = "../dibs-sql" }
facet-styx = { workspace = true, features = ["tracing"] }
codegen.workspace = true
ariadne.workspace = true
camino = "1.2.2"
indexmap.workspace = true

[dev-dependencies]
tracing.workspace = true
facet-testhelpers = { path = "../facet-testhelpers" }
dockside = { path = "../dockside" }
tokio = { workspace = true, features = ["macros", "time"] }
tokio-postgres.workspace = true
insta.workspace = true
