[package]
name = "dibs-query-schema"
version = "0.1.0"
edition = "2024"
description = "Facet types for the dibs query DSL schema"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
dibs-sql = { version = "0.1.0", path = "../dibs-sql" }
facet = { workspace = true, features = ["indexmap"] }
facet-reflect.workspace = true
facet-styx.workspace = true
indexmap = "2"
