[package]
name = "dibs-query-schema"
version = "0.2.0-rc.5"
edition = "2024"
rust-version.workspace = true
description = "Facet types for the dibs query DSL schema"
license = "MIT OR Apache-2.0"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
dibs-sql = { version = "0.2.0-rc.5", path = "../dibs-sql" }
facet = { workspace = true, features = ["indexmap"] }
facet-reflect.workspace = true
facet-styx.workspace = true
facet-testhelpers.workspace = true
indexmap = "2"
