[package]
name = "dibs-runtime"
version = "0.2.0-rc.3"
edition = "2024"
rust-version.workspace = true
description = "Runtime types for dibs-generated query code"
license = "MIT OR Apache-2.0"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
tokio-postgres.workspace = true
facet.workspace = true
facet-tokio-postgres = { workspace = true, features = ["jiff02", "rust_decimal", "uuid"] }
facet-value.workspace = true
dibs-jsonb = { version = "0.2.0-rc.3", path = "../dibs-jsonb" }
jiff.workspace = true
uuid.workspace = true
rust_decimal.workspace = true
# Structured logging for query failures. Every generated query function
# wraps its body in `.trace_err(query_name)` so postgres-side SQLSTATE,
# severity, table/column/constraint, etc. land in tracing whether the
# caller checks the Result or drops it on the floor.
tracing.workspace = true
