[package]
name = "dibs-sql"
version = "0.1.0"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata.cargo-shear]
ignored = ["facet"]  # Used by strid's #[braid] macro

[dependencies]
blake3.workspace = true
indexmap = "2"
strid.workspace = true
facet.workspace = true

[dev-dependencies]
insta = "1"
