[package]
name = "dibs-sql"
version = "0.2.0-rc.0"
edition = "2024"
rust-version.workspace = true
description = "Typed SQL AST and renderer for dibs"
license = "MIT OR Apache-2.0"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata.cargo-shear]
ignored = ["facet"]  # Used by strid's #[braid] macro

[dependencies]
blake3.workspace = true
indexmap = "2"
strid.workspace = true
facet.workspace = true

[dev-dependencies]
insta = "1"
