[package]
name = "dibs"
version = "0.2.0-rc.5"
edition = "2024"
rust-version.workspace = true
authors = ["Amos Wenger <amos@bearcove.eu>"]
description = "Postgres toolkit for Rust, powered by facet reflection"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet"
keywords = ["postgres", "database", "migrations", "facet"]
categories = ["database"]

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
bytes.workspace = true
tokio-postgres = { workspace = true, features = ["with-chrono-0_4"] }
deadpool-postgres.workspace = true
chrono.workspace = true
rust_decimal = { workspace = true, features = ["db-tokio-postgres"] }
tokio.workspace = true
inventory.workspace = true
thiserror.workspace = true
facet.workspace = true
dibs-db-schema.workspace = true
dibs-jsonb.workspace = true
dibs-macros.workspace = true
dibs-proto.workspace = true
dibs-qgen.workspace = true
vox.workspace = true
vox-stream.workspace = true
blake3.workspace = true
tracing.workspace = true
camino.workspace = true
indexmap.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
dockside = { path = "../dockside" }
tokio.workspace = true
