[package]
name = "fable"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tiny typed language over Facet-reflected Rust values, lowered toward Weavy IR."

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet.workspace = true
facet-core.workspace = true
snark = { path = "../snark", features = ["json-import"] }
weavy.workspace = true

[build-dependencies]
snark-dsl = { path = "../snark-dsl", features = ["typed-ast"] }

[dev-dependencies]
facet = { path = "../facet" }

[lints]
workspace = true
