[package]
name = "facet-args"
version = "0.43.1"
edition = "2024"
rust-version = "1.90.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet-args"
description = "Type-safe command-line argument parsing powered by Facet reflection"
documentation = "https://docs.rs/facet-args"
keywords = ["cli", "args", "parser", "facet", "command-line"]
categories = ["command-line-interface"]
homepage = "https://facet.rs"

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata.cargo-shear]
ignored = ["facet-pretty"]

[dependencies]
facet = { path = "../facet", version = "0.43.1" }
facet-core = { path = "../facet-core", version = "0.43.1" }
facet-reflect = { path = "../facet-reflect", version = "0.43.1" }
heck = "0.5.0"
owo-colors = "4"
tracing = { workspace = true }
ariadne = { version = "0.6", optional = true }

[dev-dependencies]
facet = { path = "../facet", features = ["all-impls"] }
facet-pretty = { path = "../facet-pretty" }
facet-showcase = { path = "../facet-showcase" }
insta = { workspace = true }

[features]
default = ["rich-diagnostics"]
rich-diagnostics = []
# Include doc comments in help generation (enables facet/doc)
doc = ["facet/doc"]
# Enable pretty error reporting with Ariadne
ariadne = ["dep:ariadne"]

[[example]]
name = "args_showcase"
required-features = ["ariadne"]

[lints]
workspace = true
