[package]
name = "facet-asn1"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ASN.1 serialization and deserialization for Facet types"
keywords = ["asn1", "serialization", "deserialization", "reflection", "facet"]
categories = ["encoding", "parsing", "data-structures"]

[features]
# TODO features for different encoding rules
std = ["facet-core/std", "facet-reflect/std"]
default = ["std"]

[dependencies]
facet-core = { version = "0.28.0", path = "../facet-core", default-features = false, features = ["alloc"] }
facet-reflect = { version = "0.27.16", path = "../facet-reflect", default-features = false, features = ["alloc"] }

[dev-dependencies]
facet = { path = "../facet" }
facet-testhelpers = { path = "../facet-testhelpers" }
