[package]
name = "facet-asn1"
version = "0.31.0"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet"
description = "ASN.1 serialization and deserialization for Facet types"
keywords = ["asn1", "serialization", "deserialization", "reflection", "facet"]
categories = ["encoding", "parsing", "data-structures"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "docs/meta/highlight.html"]

[features]
ci = [] # CI feature
# TODO features for different encoding rules
std = ["facet-core/std", "facet-reflect/std"]
default = ["std"]

[dependencies]
facet-core = { path = "../facet-core", default-features = false, features = [
    "alloc",
] }
facet-reflect = { path = "../facet-reflect", default-features = false, features = [
    "alloc",
] }

[dev-dependencies]
facet = { path = "../facet" }
facet-testhelpers = { path = "../facet-testhelpers" }
