[package]
name = "facet-asn1"
version = "0.34.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet"
description = "ASN.1 serialization and deserialization for Facet types"
keywords = ["asn1", "serialization", "deserialization", "reflection", "facet"]
categories = ["encoding", "parsing", "data-structures"]
homepage = "https://facet.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
# TODO features for different encoding rules
std = ["facet-core/std", "facet-reflect/std"]
default = ["std"]

[dependencies]
facet-core = { path = "../facet-core", version = "0.34.0", default-features = false, features = ["alloc"] }
facet-reflect = { path = "../facet-reflect", version = "0.34.0", default-features = false, features = ["alloc", "miette"] }

[dev-dependencies]
facet = { workspace = true, features = ["all-impls", "doc"] }
facet-testhelpers = { path = "../facet-testhelpers", version = "0.34.0" }
