[package]
name = "facet-assert"
version = "0.31.0"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet"
description = "Pretty assertions for Facet types - no PartialEq required"
keywords = ["facet", "assert", "testing", "diff", "comparison"]
categories = ["development-tools", "development-tools::testing"]

[dependencies]
facet = { path = "../facet" }
facet-core = { path = "../facet-core" }
facet-reflect = { path = "../facet-reflect" }
facet-pretty = { path = "../facet-pretty" }

[dev-dependencies]
facet = { path = "../facet" }
facet-showcase = { path = "../facet-showcase" }
owo-colors = "4"
