[package]
name = "facet-assert"
version = "0.31.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet"
description = "Pretty assertions for Facet types - no PartialEq required"
keywords = ["facet", "assert", "testing", "diff", "comparison"]
categories = ["development-tools", "development-tools::testing"]

[features]
ci = [] # CI feature

[dependencies]
facet-core = { path = "../facet-core" }
facet-diff = { path = "../facet-diff" }
facet-diff-core = { path = "../facet-diff-core" }
facet-reflect = { path = "../facet-reflect" }

[dev-dependencies]
facet = { path = "../facet" }
facet-showcase = { path = "../facet-showcase" }
owo-colors = "4"
