[package]
name = "facet-assert"
version = "0.32.3"
edition = "2024"
rust-version = "1.89.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet"
description = "Pretty assertions for Facet types - no PartialEq required"
keywords = ["facet", "assert", "testing", "diff", "comparison"]
categories = ["development-tools", "development-tools::testing"]
homepage = "https://facet.rs"

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]

[dependencies]
facet-core = { path = "../facet-core", version = "0.32.3", features = ["auto-traits", "bytes", "camino", "chrono", "fn-ptr", "indexmap", "jiff02", "net", "nonzero", "num-complex", "ordered-float", "ruint", "simd", "time", "tuples-12", "ulid", "url", "uuid"] }
facet-diff = { path = "../facet-diff", version = "0.32.3" }
facet-diff-core = { path = "../facet-diff-core", version = "0.32.3" }
facet-reflect = { path = "../facet-reflect", version = "0.32.3", features = ["miette"] }

[dev-dependencies]
facet = { workspace = true, features = ["bytes", "camino", "chrono", "doc", "jiff02", "net", "nonzero", "ordered-float", "time", "ulid", "uuid"] } #unified
facet-showcase = { path = "../facet-showcase" }
owo-colors = "4"
