[package]
name = "facet-atom"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Atom Syndication Format (RFC 4287) types for facet-xml"
keywords = ["atom", "feed", "syndication", "rss", "facet"]
categories = ["encoding", "parsing", "web-programming"]
homepage = "https://facet.rs"

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet = { workspace = true }
facet-xml = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
tracing = { workspace = true }
facet-testhelpers = { workspace = true }
facet-xml = { workspace = true, features = ["tracing"] }

[lints]
workspace = true

[features]
tracing = ["facet-xml/tracing"]
