[package]
name = "facet-axum"
version = "0.35.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet"
description = "Axum integration for Facet - extractors and responses using Facet's serialization"
keywords = ["axum", "web", "json", "serialization", "facet"]
categories = ["web-programming", "encoding"]
homepage = "https://facet.rs"

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = ["json", "form"]
json = ["facet-format-json/axum"]
form = ["facet-urlencoded/axum"]
yaml = ["facet-yaml-legacy/axum"]
toml = ["facet-toml-legacy/axum"]
xml = ["facet-xml-legacy/axum"]
kdl = ["facet-kdl-legacy/axum"]
msgpack = ["facet-msgpack-legacy/axum"]
postcard = ["facet-postcard-legacy/axum"]
all = ["json", "form", "yaml", "toml", "xml", "kdl", "msgpack", "postcard"]

[dependencies]
facet-format-json = { path = "../facet-format-json", version = "0.35.0", optional = true }
facet-kdl-legacy = { path = "../facet-kdl-legacy", version = "0.35.0", optional = true }
facet-msgpack-legacy = { path = "../facet-msgpack-legacy", version = "0.35.0", optional = true }
facet-postcard-legacy = { path = "../facet-postcard-legacy", version = "0.35.0", optional = true }
facet-toml-legacy = { path = "../facet-toml-legacy", version = "0.35.0", optional = true }
facet-urlencoded = { path = "../facet-urlencoded", version = "0.35.0", optional = true }
facet-xml-legacy = { path = "../facet-xml-legacy", version = "0.35.0", optional = true }
facet-yaml-legacy = { path = "../facet-yaml-legacy", version = "0.35.0", optional = true }

[dev-dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"] }
facet = { workspace = true, features = ["all-impls", "doc"] }
tokio = { workspace = true, features = ["io-util", "rt", "rt-multi-thread"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
