[package]
name = "facet-axum"
version = "0.35.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet"
description = "Axum integration for Facet - extractors and responses using Facet's serialization"
keywords = ["axum", "web", "json", "serialization", "facet"]
categories = ["web-programming", "encoding"]
homepage = "https://facet.rs"

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = ["json", "form"]
json = ["facet-format-json/axum"]
form = ["facet-urlencoded/axum"]
yaml = ["facet-format-yaml/axum"]
toml = ["facet-format-toml/axum"]
xml = ["facet-format-xml/axum"]
kdl = ["facet-format-kdl/axum"]
msgpack = ["facet-format-msgpack/axum"]
postcard = ["facet-format-postcard/axum"]
all = ["json", "form", "yaml", "toml", "xml", "kdl", "msgpack", "postcard"]

[dependencies]
facet-format-json = { path = "../facet-format-json", version = "0.35.0", optional = true }
facet-format-kdl = { path = "../facet-format-kdl", version = "0.35.0", optional = true }
facet-format-msgpack = { path = "../facet-format-msgpack", version = "0.35.0", optional = true }
facet-format-postcard = { path = "../facet-format-postcard", version = "0.35.0", optional = true }
facet-format-toml = { path = "../facet-format-toml", version = "0.35.0", optional = true }
facet-format-xml = { path = "../facet-format-xml", version = "0.35.0", optional = true }
facet-format-yaml = { path = "../facet-format-yaml", version = "0.35.0", optional = true }
facet-urlencoded = { path = "../facet-urlencoded", version = "0.35.0", optional = true }

[dev-dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"] }
facet = { workspace = true, features = ["all-impls", "doc"] }
tokio = { workspace = true, features = ["io-util", "rt", "rt-multi-thread"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
