[package]
name = "facet-axum"
version = "0.50.0-rc.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Axum integration for Facet - extractors and responses using Facet's serialization"
repository.workspace = true
keywords = ["axum", "web", "json", "serialization", "facet"]
categories = ["web-programming", "encoding"]
homepage = "https://facet.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = ["json", "form"]
json = ["facet-json/axum"]
form = ["facet-urlencoded/axum"]
yaml = ["facet-yaml/axum"]
toml = ["facet-toml/axum"]
xml = ["facet-xml/axum"]
msgpack = ["facet-msgpack/axum"]
postcard = ["facet-postcard/axum"]
all = ["json", "form", "yaml", "toml", "xml", "msgpack", "postcard"]

[dependencies]
facet-json = { workspace = true, optional = true }
facet-msgpack = { workspace = true, optional = true }
facet-postcard = { workspace = true, optional = true }
facet-toml = { workspace = true, optional = true }
facet-xml = { workspace = true, optional = true }
facet-yaml = { workspace = true, optional = true }
facet-urlencoded = { workspace = true, optional = true }

[dev-dependencies]
axum.workspace = true
facet = { path = "../facet", features = ["all-impls", "doc"] }
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
