[package]
name = "facet-bloatbench"
version = "0.32.1"
edition = "2024"
publish = false

[dependencies]
facet = { path = "../facet", optional = true }
facet-macros = { path = "../facet-macros", optional = true }
facet-json = { path = "../facet-json", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
ci = [] # CI feature
default = []
facet = ["dep:facet", "dep:facet-macros", "dep:facet-json"]
serde = ["dep:serde", "dep:serde_json"]

[[bin]]
name = "facet-bloatbench"
path = "src/main.rs"
