[package]
name = "facet-bloatbench"
version = "0.32.2"
edition = "2024"
publish = false

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet = { workspace = true, optional = true, features = ["bytes", "camino", "chrono", "doc", "jiff02", "net", "nonzero", "ordered-float", "time", "ulid", "uuid"] } #unified
facet-json = { path = "../facet-json", optional = true, features = ["axum"] }
facet-macros = { path = "../facet-macros", optional = true, features = ["doc", "function", "helpful-derive"] }
serde = { workspace = true, optional = true, features = ["rc"] } #unified
serde_json = { workspace = true, optional = true } #unified

[features]
default = []
facet = ["dep:facet", "dep:facet-macros", "dep:facet-json"]
serde = ["dep:serde", "dep:serde_json"]

[[bin]]
name = "facet-bloatbench"
path = "src/main.rs"
