[package]
name = "facet-bloatbench"
version = "0.35.0"
edition = "2024"
publish = false
description = "Binary size benchmarking tool for measuring compile-time and code size impact of Facet features"
keywords = ["benchmark", "bloat", "binary-size", "facet", "testing"]
categories = ["development-tools::testing", "development-tools::profiling"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet = { workspace = true, optional = true, features = ["all-impls", "doc"] }
facet-json = { path = "../facet-json", optional = true }

serde = { workspace = true, optional = true, features = ["rc"] }
serde_json = { workspace = true, optional = true }

[features]
default = []
facet = ["dep:facet", "dep:facet-json"]
serde = ["dep:serde", "dep:serde_json"]

[[bin]]
name = "facet-bloatbench"
path = "src/main.rs"
