[package]
name = "facet-cargo-toml"
version = "0.50.0-rc.0"
authors = ["Amos Wenger <amos@bearcove.eu>"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Typed Cargo.toml and Cargo.lock parser using facet"
repository.workspace = true
keywords = ["cargo", "toml", "parser", "manifest", "lockfile"]
categories = ["development-tools", "parser-implementations"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
camino.workspace = true
facet = { workspace = true, features = ["camino"] }
facet-reflect.workspace = true
facet-toml.workspace = true
facet-value.workspace = true

[dev-dependencies]
datatest-stable.workspace = true

[[test]]
name = "bearcove_manifests"
harness = false

[[test]]
name = "bearcove_lockfiles"
harness = false

[lints]
workspace = true
