[package]
name = "facet-csv-legacy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Legacy CSV deserializer and serializer for the facet ecosystem - use facet-csv instead"
keywords = ["csv", "serialization", "deserialization", "reflection", "facet"]
categories = ["encoding", "parser-implementations"]
homepage = "https://facet.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
std = ["facet-core/std", "facet-reflect/std"]
default = ["std"]

[dependencies]
facet-core = { path = "../facet-core", version = "0.35.0", default-features = false }
facet-reflect = { path = "../facet-reflect", version = "0.35.0", default-features = false, features = ["miette"] }

[dev-dependencies]
facet = { workspace = true, features = ["all-impls", "doc"] }
facet-testhelpers = { path = "../facet-testhelpers" }
